--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
 					class="mail__btn click"
 					onclick="toggleModal()"
 				>
-					<i class="fas fa-envelope"></i>
+					<img src="/assets/envelope-regular.svg" />
+					<!-- <i class="fas fa-envelope"></i> -->
 				</button>
 			</a>
 			<a
@@ -138,8 +139,8 @@
 						I am <b class="orange">motivated</b> college student with a passion for
 						<b class="orange">software</b>.
 						<br />
-						I currently go to California State University Long Beach and currently pursuing a
-						degree in Computer Science. I am seeking to use my
+						I currently go to California State University Long Beach and currently
+						pursuing a degree in Computer Science. I am seeking to use my
 						<b class="orange">skills</b> in programming to solve problems in the real
 						world
 					</p>
@@ -355,17 +356,17 @@
 		<footer>
 			<div class="container">
 				<div class="row footer__row">
-					<figure>
+					<!-- <figure>
 						<img
 							src="./assets/logo.svg"
 							alt=""
 							class="footer__logo--img"
 						/>
-					</figure>
+					</figure> -->
 					<div class="footer__social--list">
 						<a
 							href="https://github.com/JojayD"
-              target="_blank"
+							target="_blank"
 							class="footer__social--link link__hover-effect link__hover-effect--orange"
 							>Github
 						</a>
