added svg and cdn for fontawesome

--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
 			rel="stylesheet"
 			href="styles.css"
 		/>
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+			integrity="sha512-n4/mj6tuUfJrn1HJraQmG+AA7ZTgcMl+A2lhZa5Iz0gntnn6KCJYf2tc8Ed8q6yB15yIBIJVIc7ZDgcu38O0jw=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer"
+		/>
+
 		<script
 			src="https:/kit.fontawesome.com/c8e4d183c2.js"
 			crossorigin="anonymous"
