--- a/index.html
+++ b/index.html
@@ -106,19 +106,27 @@
 							target="_blank"
 							class="social__link click"
 						>
-							<i class="fab fa-linkedin-in"></i>
+							<!-- <i class="fab fa-linkedin-in"></i> -->
+							<img
+								class=""
+								src="/assets/linkedin-in.svg"
+							/>
 						</a>
 						<a
 							href=""
 							class="social__link click"
 						>
-							<i class="fab fa-github"></i>
+							<!-- <i class="fab fa-github"></i> -->
+							<img src="/assets/github.svg" />
 						</a>
 						<a
 							href=""
-							class="social__link click"
+							class="social__link click social__link-file"
 						>
-							<i class="fas fa-file-pdf"></i>
+							<!-- <i class="fas fa-file-pdf"></i> -->
+							<div class="file">
+								<img src="/assets/file-regular.svg" />
+							</div>
 						</a>
 					</div>
 				</div>
