chore: Update social media links and project images

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 					</p>
 					<div class="social__list">
 						<a
-							href="https://github.com/JojayD"
+							href="https://www.linkedin.com/in/joseph-d-89b5801b0/"
 							target="_blank"
 							class="social__link click"
 						>
@@ -113,7 +113,8 @@
 							/>
 						</a>
 						<a
-							href=""
+							href="https://github.com/JojayD"
+							target="_blank"
 							class="social__link click"
 						>
 							<!-- <i class="fab fa-github"></i> -->
@@ -300,6 +301,42 @@
 						<li class="project">
 							<div class="project__wrapper">
 								<img
+									src="./assets/geekresume.png"
+									alt=""
+									class="project__img"
+								/>
+								<!-- <img src="./assets/blinker mockup.png" alt="" class = "project__img"> -->
+								<div class="project__wrapper--bg"></div>
+								<div class="project__description">
+									<h3 class="project__description--title">Ai-Resume Helper</h3>
+									<h4 class="project__description--sub-title">
+										MongoDb, Express, ReactJS, Node.js
+									</h4>
+									<p class="project__description--para">
+										This project uses chat gpt api to give feedback to users about their
+										resumes
+									</p>
+									<div class="project__description--links">
+										<a
+											href="#"
+											class="project__description--link"
+										>
+											<i class="fab fa-github"></i>
+										</a>
+										<a
+											href="https://ai-resume-helper-six.vercel.app"
+											class="project__description--link"
+											target="_blank"
+										>
+											<i class="fas fa-link"></i>
+										</a>
+									</div>
+								</div>
+							</div>
+						</li>
+						<li class="project">
+							<div class="project__wrapper">
+								<img
 									src="./assets/blinker mockup.png"
 									alt=""
 									class="project__img"
@@ -308,14 +345,52 @@
 								<!--  This provides the blurred background -->
 								<div class="project__description">
 									<h3 class="project__description--title">Forsure</h3>
-									<h4 class="project__description--sub-title">HTML, CSS, Javascript</h4>
+									<h4 class="project__description--sub-title">
+										ReactJS, Python Flask, Firebase, Selenium
+									</h4>
 									<p class="project__description--para">
 										This project scrapes websites and puts it in one platform
 									</p>
 									<div class="project__description--links">
 										<a
+											href=""
+									
+											class="project__description--link"
+										>
+											<i class="fab fa-github"></i>
+										</a>
+										<a
 											href="https://github.com/JojayD/Forsure"
+											class="project__description--link"
 											target="_blank"
+										>
+											<i class="fas fa-link"></i>
+										</a>
+									</div>
+								</div>
+							</div>
+						</li>
+
+						<li class="project">
+							<div class="project__wrapper">
+								<img
+									src="./assets/E-portfolio.png"
+									alt=""
+									class="project__img"
+								/>
+								
+								<div class="project__wrapper--bg"></div>
+								<div class="project__description">
+									<h3 class="project__description--title">E-Portfolio</h3>
+									<h4 class="project__description--sub-title">
+										Vanilla Javascript, HTML, CSS
+									</h4>
+									<p class="project__description--para">
+										This project is a personal portfolio
+									</p>
+									<div class="project__description--links">
+										<a
+											href="#"
 											class="project__description--link"
 										>
 											<i class="fab fa-github"></i>
@@ -341,11 +416,12 @@
 								<!-- <img src="./assets/blinker mockup.png" alt="" class = "project__img"> -->
 								<div class="project__wrapper--bg"></div>
 								<div class="project__description">
-									<h3 class="project__description--title">Fragrance-ecom</h3>
-									<h4 class="project__description--sub-title">HTML, CSS, Javascript</h4>
+									<h3 class="project__description--title">E-Commerce</h3>
+									<h4 class="project__description--sub-title">
+										Typescript, Flask Python, Firebase, Bootstrap
+									</h4>
 									<p class="project__description--para">
-										This mini project takes randomizes tea shops and drinks for the
-										consumer
+										This project replicates a E-Commerce Website
 									</p>
 									<div class="project__description--links">
 										<a
@@ -355,8 +431,9 @@
 											<i class="fab fa-github"></i>
 										</a>
 										<a
-											href="#"
+											href="https://github.com/JojayD/Fragrance-ecom"
 											class="project__description--link"
+											target="_blank"
 										>
 											<i class="fas fa-link"></i>
 										</a>
