feat: Add Lingo AI project to project list

--- a/index.html
+++ b/index.html
@@ -301,6 +301,42 @@
 						<li class="project">
 							<div class="project__wrapper">
 								<img
+									src="./assets/lingo.png"
+									alt=""
+									class="project__img"
+								/>
+								<!-- <img src="./assets/blinker mockup.png" alt="" class = "project__img"> -->
+								<div class="project__wrapper--bg"></div>
+								<div class="project__description">
+									<h3 class="project__description--title">Lingo AI</h3>
+									<h4 class="project__description--sub-title">
+										Firebase, Python, Next.js, Python Flask
+									</h4>
+									<p class="project__description--para">
+										This project was created at a hackathon with the goal help break down barrier languages between people by simulating an environment where people can learn how to speak English
+									</p>
+									<div class="project__description--links">
+										<a
+											href="https://github.com/JojayD/lb-motion"
+											class="project__description--link"
+											taarget="_blank"
+										>
+											<i class="fab fa-github"></i>
+										</a>
+										<a
+											href="https://lb-motion-iqs5bmw8i-jojayds-projects.vercel.app"
+											class="project__description--link"
+											target="_blank"
+										>
+											<i class="fas fa-link"></i>
+										</a>
+									</div>
+								</div>
+							</div>
+						</li>
+						<li class="project">
+							<div class="project__wrapper">
+								<img
 									src="./assets/geekresume.png"
 									alt=""
 									class="project__img"
@@ -308,7 +344,7 @@
 								<!-- <img src="./assets/blinker mockup.png" alt="" class = "project__img"> -->
 								<div class="project__wrapper--bg"></div>
 								<div class="project__description">
-									<h3 class="project__description--title">Ai-Resume Helper</h3>
+									<h3 class="project__description--title">Geekresume</h3>
 									<h4 class="project__description--sub-title">
 										MongoDb, Express, ReactJS, Node.js
 									</h4>
@@ -337,7 +373,7 @@
 						<li class="project">
 							<div class="project__wrapper">
 								<img
-									src="./assets/blinker mockup.png"
+									src="./assets/coming-soon.png"
 									alt=""
 									class="project__img"
 								/>
@@ -354,7 +390,6 @@
 									<div class="project__description--links">
 										<a
 											href=""
-									
 											class="project__description--link"
 										>
 											<i class="fab fa-github"></i>
@@ -378,7 +413,7 @@
 									alt=""
 									class="project__img"
 								/>
-								
+
 								<div class="project__wrapper--bg"></div>
 								<div class="project__description">
 									<h3 class="project__description--title">E-Portfolio</h3>
