feat: Add experience section with responsive design and styling

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
-		<title>Joseph David</title>
+		<title class="name-title">Joseph David</title>
 		<link
 			rel="stylesheet"
 			href="styles.css"
@@ -54,6 +54,13 @@
 							href="#"
 							class="nav__link--anchor link__hover-effect link__hover-efect--orange"
 							>About</a
+						>
+					</li>
+					<li class="nav__link click exerience-li">
+						<a
+							href="#experience"
+							class="nav__link--anchor link__hover-effect link__hover-efect--orange"
+							>Experience</a
 						>
 					</li>
 					<li class="nav__link click">
@@ -290,7 +297,34 @@
 				class="shape shape--8"
 			/>
 		</section>
+		<section id="experience">
+			<div class="container">
+				<h2>Experience</h2>
+				<div class="experience-item-card">
+					<h3>Undergraduate Research Intern</h3>
+					<p>California State University Long Beach</p>
+					<span>Aug 2024- Present</span>
+					<p>Working with ECG classification under Dr. Xin Qin using Pytorch for deep learning</p>
+				</div>
 
+				<div class="experience-item-card">
+					<h3>ACM Beach Hacks Committee Developer</h3>
+					<p>ACM CSULB</p>
+					<span>Oct 2024 - Present</span>
+					<p>Create </p>
+				</div>
+
+				<div class="experience-item-card">
+					<h3>Python Teaching Assistant</h3>
+					<p>De Anza College</p>
+					<span>Apr 2023 - June 2023</span>
+					<p>Assisted over 30 students with understanding and solving problems related to their Python coursework,
+significantly enhancing their academic performance</p>
+				</div>
+			</div>
+		</section>
+			
+		</section>
 		<section id="projects">
 			<div class="container">
 				<div class="row">
@@ -313,7 +347,9 @@
 										Firebase, Python, Next.js, Python Flask
 									</h4>
 									<p class="project__description--para">
-										This project was created at a hackathon with the goal help break down barrier languages between people by simulating an environment where people can learn how to speak English
+										This project was created at a hackathon with the goal help break down
+										barrier languages between people by simulating an environment where
+										people can learn how to speak English
 									</p>
 									<div class="project__description--links">
 										<a
@@ -364,7 +400,12 @@
 											class="project__description--link"
 											target="_blank"
 										>
-											<i class="fas fa-link"></i>
+											<i class="fas fa-link">
+												<iframe src="./assets/portfolio-resume.pdf" width="100%" height="800px">
+                				Your browser does not support PDFs. 
+                				<a href="./assets/portfolio-resume.pdf">Download the resume</a>.
+           					 </iframe>
+											</i>
 										</a>
 									</div>
 								</div>
