feat: Enhance experience section with detailed project description and style adjustments

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 					<h3>ACM Beach Hacks Committee Developer</h3>
 					<p>ACM CSULB</p>
 					<span>Oct 2024 - Present</span>
-					<p>Create </p>
+					<p>Developing a dynamic website for the organization’s hackathon, integrating both front-end and back-end functionalities, for 200+ users</p>
 				</div>
 
 				<div class="experience-item-card">
@@ -400,12 +400,7 @@ significantly enhancing their academic performance</p>
 											class="project__description--link"
 											target="_blank"
 										>
-											<i class="fas fa-link">
-												<iframe src="./assets/portfolio-resume.pdf" width="100%" height="800px">
-                				Your browser does not support PDFs. 
-                				<a href="./assets/portfolio-resume.pdf">Download the resume</a>.
-           					 </iframe>
-											</i>
+			
 										</a>
 									</div>
 								</div>
