--- a/index.html
+++ b/index.html
@@ -15,13 +15,17 @@
 			rel="stylesheet"
 			href="styles.css"
 		/>
-		<link
+		<!-- <link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
 			integrity="sha512-n4/mj6tuUfJrn1HJraQmG+AA7ZTgcMl+A2lhZa5Iz0gntnn6KCJYf2tc8Ed8q6yB15yIBIJVIc7ZDgcu38O0jw=="
 			crossorigin="anonymous"
 			referrerpolicy="no-referrer"
-		/>
+		/> -->
+		 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" 
+          integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" 
+          crossorigin="anonymous" 
+          referrerpolicy="no-referrer" />
 
 		<script
 			src="https:/kit.fontawesome.com/c8e4d183c2.js"
@@ -409,29 +413,30 @@ significantly enhancing their academic performance</p>
 						<li class="project">
 							<div class="project__wrapper">
 								<img
-									src="./assets/coming-soon.png"
+									src="./assets/sharksearch.png"
 									alt=""
 									class="project__img"
 								/>
 								<div class="project__wrapper--bg"></div>
 								<!--  This provides the blurred background -->
 								<div class="project__description">
-									<h3 class="project__description--title">Forsure</h3>
+									<h3 class="project__description--title">Shark Seek</h3>
 									<h4 class="project__description--sub-title">
-										ReactJS, Python Flask, Firebase, Selenium
+										Typescript, React, Next.js, Beautiful Soup, Python Flask
 									</h4>
 									<p class="project__description--para">
-										This project scrapes websites and puts it in one platform
+										Searches classes for CSULB students with RMP ratings
 									</p>
 									<div class="project__description--links">
 										<a
-											href=""
+											target="_blank"
+											href="https://github.com/JojayD/shark-search"
 											class="project__description--link"
 										>
 											<i class="fab fa-github"></i>
 										</a>
 										<a
-											href="https://github.com/JojayD/Forsure"
+											href="https://github.com/JojayD/shark-search"
 											class="project__description--link"
 											target="_blank"
 										>
@@ -464,7 +469,9 @@ significantly enhancing their academic performance</p>
 											href="#"
 											class="project__description--link"
 										>
-											<i class="fab fa-github"></i>
+											<i class="fab fa-github">
+											
+											</i>
 										</a>
 										<a
 											href="#"
